Changelog
=========

1.1.2 - Unreleased
------------------

- Hide plone.app.discussion comment viewlet from print.
  [timo]

1.1.1 - 2011-02-10
------------------

- Renamed options box in IEFixes for keyword multiple select enhancement PLIP.
  Refs http://dev.plone.org/plone/ticket/11017.
  [rmattb]

1.1 - 2011-02-04
----------------

- Merge PLIP 11017: Tags MultiSelectionWidget w/scrollbar & checkboxes.
  [esteele]
  
1.0.6 - 2011-01-18
------------------

- Adjust the new setuphandler introduced in 1.0.5 to avoid using copy/paste,
  which introduced unwanted additional security checks. 
  [hannosch]

- Tightened selector for error fields to avoid z3cform inner div.error.
  [elro]

- Added styling for z3cform title and description fields.
  [elro]

1.0.5 - 2011-01-04
------------------

- Added iframe to style reset.
  [elro]

- Added ajax_include_head request parameter for use with cross domain iframe.
  [elro]

- Copy the plone_setup action to the user action category via a custom
  setuphandler rather than in actions.xml, so that we don't have to hardcode
  the various action settings here.  This provides forward compatibility with
  Plone 4.1, where the URL and permission change.
  [davisagli]

- Fixed content views list shift under ie6.
  This fixes http://dev.plone.org/plone/ticket/11280.
  [thomasdesvenain]

1.0.4 - 2010-11-15
------------------

- Restore more of the table.listing (Fancy listing) CSS. Refs #10331.
  [rossp]

1.0.3 - 2010-09-09
------------------

- Removed padding from navigation portlet header when it is hidden, so we won't
  see a small chunk of it. This fixes http://dev.plone.org/plone/ticket/10800.
  [cwainwright]

- Worked on fixing up styles for IE8:

  * put previous logo settings back (float messes with rtl)
  * put in IE spacing fixes (logo, hiddenStructure)
  * removed float from div.cell, so livesearch and display menu don't fall
    behind other items in IE8.

  Closes http://dev.plone.org/plone/ticket/10872.
  [cwainwright]